--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>4 Uno Rules You're Playing Wrong</title>
-    <link rel="stylesheet" href="css/html5reset.css" type= "text/css">  
+    <link rel="stylesheet" href="css/style.css" type= "text/css">  
+    <link rel="stylesheet" href="html5reset/style.css" type= "text/css">  
 
   </head>
   <body>
